[gd_scene load_steps=12 format=3 uid="uid://dmdvm8jdx2sl3"]

[ext_resource type="Script" path="res://scripts/tower/tower_test/tower.gd" id="1_tg6e5"]
[ext_resource type="Script" path="res://scripts/tower/tower_test/base.gd" id="2_odqhq"]
[ext_resource type="Texture2D" uid="uid://vv8dx6nj4b75" path="res://sprites/towers/tower_test/base.svg" id="3_7we1j"]
[ext_resource type="Texture2D" uid="uid://dg8tvkyrmwqix" path="res://sprites/towers/tower_test/barrel.svg" id="4_5aqu4"]
[ext_resource type="Texture2D" uid="uid://b25lkiwisn31" path="res://sprites/towers/tower_test/turret.svg" id="5_1qqfp"]
[ext_resource type="Texture2D" uid="uid://cye4fvqe6pv35" path="res://sprites/towers/tower_test/collision.svg" id="6_jaupv"]
[ext_resource type="Texture2D" uid="uid://iu5snjhufk02" path="res://sprites/towers/tower_test/default.svg" id="7_t1blg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8gnok"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_34hor"]
radius = 180.0

[sub_resource type="SpriteFrames" id="SpriteFrames_bngoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jaupv")
}],
"loop": true,
"name": &"collision",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_t1blg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocgsi"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 180
corner_radius_top_right = 180
corner_radius_bottom_right = 180
corner_radius_bottom_left = 180

[node name="Tower" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_tg6e5")

[node name="Base" type="RigidBody2D" parent="."]
collision_layer = 32
collision_mask = 4
max_contacts_reported = 1
contact_monitor = true
freeze = true
freeze_mode = 1
script = ExtResource("2_odqhq")

[node name="BaseSprite" type="Sprite2D" parent="Base"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_7we1j")

[node name="BaseCollision" type="CollisionShape2D" parent="Base"]
shape = SubResource("CircleShape2D_8gnok")

[node name="BarrelSprite" type="Sprite2D" parent="."]
position = Vector2(32, 0)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_5aqu4")

[node name="TurretSprite" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_1qqfp")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="RangeCollision" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_34hor")

[node name="SwitchSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_bngoj")

[node name="AttackRangeVisual" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.313726)
offset_left = -180.0
offset_top = -180.0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ocgsi")

[connection signal="body_entered" from="Base" to="Base" method="_on_body_entered"]
